# Stock_Screener

./: README.md  config.yaml  financial_data.db  pyproject.toml
output/: aapl.json  aapl_analysis.json  hyundai_analysis.json  nvda_analysis.json  reliance_analysis.json  swiggy_analysis.json  tcs_analysis.json
src/: __init__.py  config.py  data_fetcher.py  database.py  main.py  models.py  processor.py  signals.py
tests/: conftest.py  test_integration.py  test_models.py  test_processor.py  test_signals.py
