[tool.poetry]
name = "financial_analyzer"
version = "0.1.0"
description = "Fund Screener Intern Project"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }]
[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
yfinance = "^0.2.0"
pydantic = "^2.0"
typer = {extras = ["all"], version = "^0.9.0"}
sqlalchemy = "^2.0"
pyyaml = "^6.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"